--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,37 @@
   color: white;
 }
 
+.custom-input{
+  background-color: #282c34;
+  color: white;
+  border-radius: 4px;
+  border: 0.5px solid green;
+  padding: 8px;
+  margin: 6px 4px;
+}
+
+.btn{
+  padding: 10px 18px;
+  background-color: blue;
+  color: white;
+  border: 1px solid;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.dropdown{
+  padding: 8px 15px;
+  background-color: #282c34;
+  color: white;
+  border: 1px solid;
+  border-radius: 5px;
+  margin: 6px 4px;
+}
+
+.btn:hover{
+  background-color: rgb(91, 91, 243);
+}
+
 .App-link {
   color: #61dafb;
 }
