--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 .App {
   text-align: center;
 }
@@ -27,16 +28,21 @@
   color: white;
 }
 
-.custom-input{
-  background-color: #282c34;
-  color: white;
+.custom-input {
+  background-color: white;
   border-radius: 4px;
-  border: 0.5px solid green;
+  box-shadow: 0 10px 25px rgba(0, 0, 0, .1);
   padding: 8px;
   margin: 6px 4px;
 }
 
-.btn{
+.custom-input:focus {
+  outline: none !important;
+  border: 1px solid rgb(89, 54, 208);
+  box-shadow: 0 0 10px #719ECE;
+}
+
+.btn {
   padding: 10px 18px;
   background-color: blue;
   color: white;
@@ -45,16 +51,70 @@
   cursor: pointer;
 }
 
-.dropdown{
+/* .dropdown{
   padding: 8px 15px;
   background-color: #282c34;
   color: white;
   border: 1px solid;
   border-radius: 5px;
   margin: 6px 4px;
+} */
+
+.dropdown {
+  width: 300px;
+  border-radius: 10px;
+  box-shadow: 0 10px 25px rgba(0, 0, 0, .1);
+  background-color: white;
 }
 
-.btn:hover{
+.dropdown-header {
+  padding: 15px;
+  cursor: pointer;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.dropdown-body {
+  padding: 5px;
+  border-top: 1px solid #E5E8EC;
+  display: none;
+}
+
+.dropdown-body.open {
+  display: block;
+}
+
+.dropdown-item {
+  padding: 10px;
+}
+
+.dropdown-item:hover {
+  cursor: pointer;
+}
+
+.dropdown-item-dot {
+  opacity: 0;
+  color: #91A5BE;
+  transition: all .2s ease-in-out;
+}
+
+.dropdown-item-dot.selected {
+  opacity: 1;
+}
+
+.icon {
+  font-size: 13px;
+  color: #91A5BE;
+  transform: rotate(0deg);
+  transition: all .2s ease-in-out;
+}
+
+.icon.open {
+  transform: rotate(90deg);
+}
+
+.btn:hover {
   background-color: rgb(91, 91, 243);
 }
 
@@ -66,6 +126,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
@@ -137,10 +198,10 @@
 
   .toastify-left,
   .toastify-right {
-      margin-left: auto;
-      margin-right: auto;
-      left: 0;
-      right: 0;
-      max-width: fit-content
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    max-width: fit-content
   }
 }
